--- a/a1911757_S1_ANLP_assign2.ipynb
+++ b/a1911757_S1_ANLP_assign2.ipynb
@@ -29,10 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 1,
    "id": "3278470a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vuanhtu52/Desktop/Applied Natural Language Processing/Assignments/Assignment 2/anlp-assignment2/anlp_ass2/lib/python3.7/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "import pandas as pd\n",
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "id": "12bb8d0d",
    "metadata": {},
    "outputs": [],
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 3,
    "id": "2001503e",
    "metadata": {},
    "outputs": [
@@ -182,7 +191,7 @@
        "4  For Megyn Kelly, the shift from Fox News to NB...  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 4,
    "id": "0456503f",
    "metadata": {},
    "outputs": [
@@ -210,7 +219,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,8 +229,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7a24c00",
+   "metadata": {},
+   "source": [
+    "No missing values in our dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "id": "3d8679da",
    "metadata": {},
    "outputs": [],
@@ -232,10 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "id": "d762b06b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:13<00:00, 72.91it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "articles = df[\"article\"].to_list()\n",
     "for article in tqdm(articles):\n",
@@ -244,8 +269,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f20cac7",
+   "metadata": {},
+   "source": [
+    "All articles are in English, so we do not have to discard any sample."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "id": "e4a76d06",
    "metadata": {},
    "outputs": [],
@@ -255,6 +288,7 @@
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "def preprocess(text, lemmatize=True):\n",
+    "    \"\"\"Preprocess the article for word2vec model\"\"\"\n",
     "    text_cleaned = \"\"\n",
     "\n",
     "    # Lowercase the text\n",
@@ -285,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 8,
    "id": "003694c0",
    "metadata": {},
    "outputs": [],
@@ -296,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 9,
    "id": "1d8e0a0a",
    "metadata": {},
    "outputs": [
@@ -414,7 +448,7 @@
        "4  megyn kelly , shift fox news nbc host daily da...  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 10,
    "id": "1d83fc38",
    "metadata": {},
    "outputs": [
@@ -675,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 11,
    "id": "22676d66",
    "metadata": {},
    "outputs": [],
@@ -815,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 12,
    "id": "a6434f6c",
    "metadata": {},
    "outputs": [],
@@ -840,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 13,
    "id": "1811ab14",
    "metadata": {},
    "outputs": [],
@@ -911,10 +945,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 14,
    "id": "56b11210",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|██████████| 41/41 [02:34<00:00,  3.77s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average f1: 0.18989547038327526\n",
+      "Average exact match scores: 0.12195121951219512\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the answers extracted by classic approach\n",
     "f1_scores = []\n",
@@ -935,10 +992,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 15,
    "id": "00f6a97e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|██████████| 41/41 [02:29<00:00,  3.66s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   MAP@5    MAP@10    MAP@15       MRR\n",
+      "--------  --------  --------  --------\n",
+      "0.178537   0.20435  0.216056  0.339857\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate how well the system finds the relevant sentences\n",
     "\n",
@@ -984,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 16,
    "id": "62294ae1",
    "metadata": {},
    "outputs": [],
@@ -1004,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 17,
    "id": "1e034689",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1095,7 @@
      "text": [
       "/Users/vuanhtu52/Desktop/Applied Natural Language Processing/Assignments/Assignment 2/anlp-assignment2/anlp_ass2/lib/python3.7/site-packages/huggingface_hub/file_download.py:654: FutureWarning: 'cached_download' is the legacy way to download files from the HF hub, please consider upgrading to 'hf_hub_download'\n",
       "  FutureWarning,\n",
-      "Fetching 11 files: 100%|██████████| 11/11 [00:00<00:00, 97541.95it/s]\n"
+      "Fetching 11 files: 100%|██████████| 11/11 [00:00<00:00, 35246.25it/s]\n"
      ]
     }
    ],
@@ -1025,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 18,
    "id": "48de50bc",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 41/41 [00:12<00:00,  3.40it/s]"
+      "Evaluating: 100%|██████████| 41/41 [00:10<00:00,  3.85it/s]"
      ]
     },
     {
@@ -1076,18 +1157,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 19,
    "id": "61cb7581",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Articles: 100%|██████████| 35/35 [10:20<00:00, 17.74s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate the predictions on squad dataset\n",
     "\n",
@@ -1116,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 20,
    "id": "4fdac7af",
    "metadata": {},
    "outputs": [
@@ -1124,10 +1197,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
       "{\n",
       "  \"exact\": 33.95940368904237,\n",
       "  \"f1\": 38.74344064147275,\n",
@@ -1147,7 +1216,7 @@
        "CompletedProcess(args=['python', 'squad/evaluate-v2.0.py', 'squad/dev-v2.0.json', 'squad/predictions/bidaf.json'], returncode=0)"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 21,
    "id": "0790fedb",
    "metadata": {},
    "outputs": [],
@@ -1182,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 41,
    "id": "873d9acf",
    "metadata": {},
    "outputs": [
@@ -1233,18 +1302,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 23,
    "id": "fd05a28e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Articles: 100%|██████████| 35/35 [27:34<00:00, 47.27s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate the predictions on squad dataset\n",
     "\n",
@@ -1273,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 24,
    "id": "03173147",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1365,7 @@
        "CompletedProcess(args=['python', 'squad/evaluate-v2.0.py', 'squad/dev-v2.0.json', 'squad/predictions/spanbert.json'], returncode=0)"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 25,
    "id": "25ccb339",
    "metadata": {},
    "outputs": [],
@@ -1338,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 26,
    "id": "86e1e031",
    "metadata": {},
    "outputs": [],
@@ -1379,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 27,
    "id": "58a1b641",
    "metadata": {},
    "outputs": [
@@ -1387,7 +1448,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 41/41 [00:14<00:00,  2.92it/s]"
+      "Evaluating: 100%|██████████| 41/41 [00:13<00:00,  2.96it/s]"
      ]
     },
     {
@@ -1426,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 28,
    "id": "ba9c8576",
    "metadata": {},
    "outputs": [
@@ -1434,7 +1495,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Articles: 100%|██████████| 35/35 [28:24<00:00, 48.69s/it]\n"
+      "Articles: 100%|██████████| 35/35 [26:46<00:00, 45.90s/it]\n"
      ]
     }
    ],
@@ -1462,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 29,
    "id": "824e05e1",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1554,7 @@
        "CompletedProcess(args=['python', 'squad/evaluate-v2.0.py', 'squad/dev-v2.0.json', 'squad/predictions/bert_base.json'], returncode=0)"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 30,
    "id": "fd667608",
    "metadata": {},
    "outputs": [],
@@ -1526,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 31,
    "id": "05dd12ac",
    "metadata": {},
    "outputs": [],
@@ -1560,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 32,
    "id": "4a8f095d",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1629,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 41/41 [00:07<00:00,  5.40it/s]"
+      "Evaluating: 100%|██████████| 41/41 [00:07<00:00,  5.58it/s]"
      ]
     },
     {
@@ -1607,18 +1668,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 33,
    "id": "1f1b402c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Articles: 100%|██████████| 35/35 [14:52<00:00, 25.51s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate predictions on squad dataset\n",
     "\n",
@@ -1644,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 34,
    "id": "a1137f1a",
    "metadata": {},
    "outputs": [
@@ -1675,7 +1728,7 @@
        "CompletedProcess(args=['python', 'squad/evaluate-v2.0.py', 'squad/dev-v2.0.json', 'squad/predictions/distilbert.json'], returncode=0)"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1695,11 +1748,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 35,
    "id": "35f31ab6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load model and tokenizer\n",
     "model_name = \"bert-large-uncased-whole-word-masking-finetuned-squad\"\n",
     "bert_large_model = BertForQuestionAnswering.from_pretrained(model_name)\n",
     "bert_large_tokenizer = BertTokenizer.from_pretrained(model_name)"
@@ -1707,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 36,
    "id": "5c1b7bf7",
    "metadata": {},
    "outputs": [],
@@ -1768,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 37,
    "id": "9720366b",
    "metadata": {},
    "outputs": [
@@ -1776,7 +1830,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 41/41 [00:46<00:00,  1.13s/it]"
+      "Evaluating: 100%|██████████| 41/41 [00:44<00:00,  1.09s/it]"
      ]
     },
     {
@@ -1796,6 +1850,8 @@
     }
    ],
    "source": [
+    "# Evaluate on test set\n",
+    "\n",
     "import logging\n",
     "logging.disable(logging.WARNING)\n",
     "\n",
@@ -1817,18 +1873,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 38,
    "id": "2285cd50",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Articles: 100%|██████████| 35/35 [1:22:02<00:00, 140.64s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate predictions on squad dataset\n",
     "\n",
@@ -1854,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 39,
    "id": "517817dc",
    "metadata": {},
    "outputs": [
@@ -1885,7 +1933,7 @@
        "CompletedProcess(args=['python', 'squad/evaluate-v2.0.py', 'squad/dev-v2.0.json', 'squad/predictions/bert_large.json'], returncode=0)"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1905,63 +1953,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 40,
    "id": "44ba07e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please select a model to answer your question: \n",
-      "1. Classic model\n",
-      "2. BiDAF\n",
-      "3. SpanBERT\n",
-      "4. BERT base\n",
-      "5. DISTILBERT\n",
-      "6.BERT large\n",
-      "Model selected: 1\n",
-      "\n",
-      "Article id selected: 17311\n",
-      "Question:  Who was the President during the conflict?\n",
-      "Answer: George W. Bush\n",
-      "\n",
-      "Please select a model to answer your question: \n",
-      "1. Classic model\n",
-      "2. BiDAF\n",
-      "3. SpanBERT\n",
-      "4. BERT base\n",
-      "5. DISTILBERT\n",
-      "6.BERT large\n",
-      "Model selected: 4\n",
-      "\n",
-      "Article id selected: 17311\n",
-      "Question:  Who was the President during the conflict?\n",
-      "Answer: No answer found\n",
-      "\n",
-      "Please select a model to answer your question: \n",
-      "1. Classic model\n",
-      "2. BiDAF\n",
-      "3. SpanBERT\n",
-      "4. BERT base\n",
-      "5. DISTILBERT\n",
-      "6.BERT large\n",
-      "Model selected: 3\n",
-      "\n",
-      "Article id selected: 17311\n",
-      "Question:  Who was the President during the conflict?\n",
-      "Answer: george w. bush\n",
-      "\n",
-      "Please select a model to answer your question: \n",
-      "1. Classic model\n",
-      "2. BiDAF\n",
-      "3. SpanBERT\n",
-      "4. BERT base\n",
-      "5. DISTILBERT\n",
-      "6.BERT large\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def start_app():\n",
     "    while True:\n",
@@ -2020,6 +2015,7 @@
     "            break\n",
     "        print(\"Question: \", question)\n",
     "\n",
+    "        # Generate answer\n",
     "        answer = \"\"\n",
     "        if model_id == 1:\n",
     "            answer = answer_question_classic(question=question, article=article)\n",
