Add repo address in notebook

--- a/a1911757_S1_ANLP_assign2.ipynb
+++ b/a1911757_S1_ANLP_assign2.ipynb
@@ -11,6 +11,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "740d95cb",
+   "metadata": {},
+   "source": [
+    "To view all related files used in this notebook, please refer to the full project at: https://github.com/vuanhtu52/anlp-assignment2.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3df2aac6",
    "metadata": {},
    "source": [
