--- a/a1911757_S1_ANLP_assign2.ipynb
+++ b/a1911757_S1_ANLP_assign2.ipynb
@@ -265,7 +265,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:13<00:00, 72.91it/s]\n"
+      "100%|██████████| 1000/1000 [00:13<00:00, 76.23it/s]\n"
      ]
     }
    ],
@@ -968,7 +968,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average f1: 0.18989547038327526\n",
+      "Average f1: 0.18292682926829268\n",
       "Average exact match scores: 0.12195121951219512\n"
      ]
     },
@@ -1008,7 +1008,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 41/41 [02:29<00:00,  3.66s/it]"
+      "Evaluating: 100%|██████████| 41/41 [02:28<00:00,  3.63s/it]"
      ]
     },
     {
@@ -1017,7 +1017,7 @@
      "text": [
       "   MAP@5    MAP@10    MAP@15       MRR\n",
       "--------  --------  --------  --------\n",
-      "0.178537   0.20435  0.216056  0.339857\n"
+      "0.143171  0.173056  0.184014  0.299168\n"
      ]
     },
     {
@@ -1064,22 +1064,67 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "25f8d33d",
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6e354330",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 19029/19029 [16:09<00:00, 19.63it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "### BiDAF"
+    "# Get the train squad data\n",
+    "with open(\"squad/train-v2.0.json\", \"r\") as f:\n",
+    "    squad_train = json.load(f)\n",
+    "\n",
+    "articles = []\n",
+    "for article in squad_train[\"data\"]:\n",
+    "    for paragraph in article[\"paragraphs\"]:\n",
+    "        articles.append(paragraph[\"context\"])\n",
+    "\n",
+    "articles = list(set(articles))\n",
+    "# articles = [preprocess(article) for article in articles]\n",
+    "# for i, article in tqdm(articles, desc=\"Preprocessing\"):\n",
+    "for i, article in tqdm(enumerate(articles), total=len(articles)):\n",
+    "    articles[i] = preprocess(article)\n",
+    "\n",
+    "w2v_model_2 = Word2Vec(articles, min_count=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
+   "id": "cbd9399f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w2v_model_2.save(\"squad/models/w2v_squad.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8ed90f3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w2v_model_2 = Word2Vec.load(\"squad/models/w2v_squad.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "62294ae1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess_article(text):\n",
-    "    \"\"\"Preprocessing the articles before feeding into BiDAF and BERT variants\"\"\"\n",
+    "    \"\"\"Preprocessing the articles before feeding into the models\"\"\"\n",
     "    text_cleaned = \"\"\n",
     "\n",
     "    # Remove ?\n",
@@ -1089,6 +1134,99 @@
     "    text_cleaned = re.sub(\" +\", \" \", text_cleaned).strip()\n",
     "\n",
     "    return text_cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "863e61f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Articles: 100%|██████████| 35/35 [1:04:37<00:00, 110.79s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate predictions on the squad dev set\n",
+    "\n",
+    "# f1_scores = []\n",
+    "# em_scores = []\n",
+    "\n",
+    "# with open(\"squad/dev-v2.0.json\", \"r\") as f:\n",
+    "#     data = json.load(f)\n",
+    "\n",
+    "# ids = []\n",
+    "# answers = []\n",
+    "# for article in tqdm(data[\"data\"], desc=\"Articles\"):\n",
+    "#         for paragraph in article[\"paragraphs\"]:\n",
+    "#             context = paragraph[\"context\"]\n",
+    "#             for qa in paragraph[\"qas\"]:\n",
+    "#                 try:\n",
+    "#                     answer_predicted = answer_question_classic(question=qa[\"question\"], article=preprocess_article(context))\n",
+    "#                     answers.append(answer_predicted)\n",
+    "#                     ids.append(qa[\"id\"])\n",
+    "#                 except Exception:\n",
+    "#                      answers.append(\"\")\n",
+    "#                      ids.append(qa[\"id\"])\n",
+    "\n",
+    "\n",
+    "# predictions = {}\n",
+    "# for i, _ in enumerate(ids):\n",
+    "#     predictions[ids[i]] = answers[i]\n",
+    "\n",
+    "# with open(\"squad/predictions/classic.json\", \"w\") as f:\n",
+    "#     json.dump(predictions, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "451bbe4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"exact\": 34.0604733428788,\n",
+      "  \"f1\": 34.75574425638583,\n",
+      "  \"total\": 11873,\n",
+      "  \"HasAns_exact\": 4.301619433198381,\n",
+      "  \"HasAns_f1\": 5.694155120794402,\n",
+      "  \"HasAns_total\": 5928,\n",
+      "  \"NoAns_exact\": 63.734230445752736,\n",
+      "  \"NoAns_f1\": 63.734230445752736,\n",
+      "  \"NoAns_total\": 5945\n",
+      "}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['python', 'squad/evaluate-v2.0.py', 'squad/dev-v2.0.json', 'squad/predictions/classic.json'], returncode=0)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate on squad dev set\n",
+    "subprocess.run([\"python\", \"squad/evaluate-v2.0.py\"] + [\"squad/dev-v2.0.json\", \"squad/predictions/classic.json\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25f8d33d",
+   "metadata": {},
+   "source": [
+    "### BiDAF"
    ]
   },
   {
