--- a/a1911757_S1_ANLP_assign2.ipynb
+++ b/a1911757_S1_ANLP_assign2.ipynb
@@ -712,7 +712,7 @@
    "id": "67214f76",
    "metadata": {},
    "source": [
-    "### Functions used for evaluation section later"
+    "### Functions used for evaluation later"
    ]
   },
   {
@@ -981,7 +981,7 @@
     }
    ],
    "source": [
-    "# Evaluate the answers extracted by classic approach\n",
+    "# Evaluate on custom test set\n",
     "f1_scores = []\n",
     "em_scores = []\n",
     "\n",
@@ -1029,7 +1029,7 @@
     }
    ],
    "source": [
-    "# Evaluate how well the system finds the relevant sentences\n",
+    "# Evaluate how well the system finds the relevant sentences on custom test set\n",
     "\n",
     "truths = []\n",
     "predictions = []\n",
@@ -1078,22 +1078,21 @@
     }
    ],
    "source": [
-    "# Get the train squad data\n",
-    "with open(\"squad/train-v2.0.json\", \"r\") as f:\n",
-    "    squad_train = json.load(f)\n",
+    "# Train the word2vec model on squad train dataset\n",
     "\n",
-    "articles = []\n",
-    "for article in squad_train[\"data\"]:\n",
-    "    for paragraph in article[\"paragraphs\"]:\n",
-    "        articles.append(paragraph[\"context\"])\n",
+    "# with open(\"squad/train-v2.0.json\", \"r\") as f:\n",
+    "#     squad_train = json.load(f)\n",
     "\n",
-    "articles = list(set(articles))\n",
-    "# articles = [preprocess(article) for article in articles]\n",
-    "# for i, article in tqdm(articles, desc=\"Preprocessing\"):\n",
-    "for i, article in tqdm(enumerate(articles), total=len(articles)):\n",
-    "    articles[i] = preprocess(article)\n",
+    "# articles = []\n",
+    "# for article in squad_train[\"data\"]:\n",
+    "#     for paragraph in article[\"paragraphs\"]:\n",
+    "#         articles.append(paragraph[\"context\"])\n",
     "\n",
-    "w2v_model_2 = Word2Vec(articles, min_count=1)"
+    "# articles = list(set(articles))\n",
+    "# for i, article in tqdm(enumerate(articles), total=len(articles)):\n",
+    "#     articles[i] = preprocess(article)\n",
+    "\n",
+    "# w2v_model_2 = Word2Vec(articles, min_count=1)"
    ]
   },
   {
@@ -1103,7 +1102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w2v_model_2.save(\"squad/models/w2v_squad.model\")"
+    "# w2v_model_2.save(\"squad/models/w2v_squad.model\")"
    ]
   },
   {
@@ -1280,7 +1279,7 @@
     }
    ],
    "source": [
-    "# Evaluate the answers extracted by the model\n",
+    "# Evaluate on custom test set\n",
     "f1_scores = []\n",
     "em_scores = []\n",
     "\n",
@@ -1425,7 +1424,7 @@
     }
    ],
    "source": [
-    "# Evaluate answers\n",
+    "# Evaluate on custom test set\n",
     "f1_scores = []\n",
     "em_scores = []\n",
     "\n",
@@ -1557,7 +1556,7 @@
     "    token_type_ids = inputs[\"token_type_ids\"]\n",
     "    attention_mask = inputs[\"attention_mask\"]\n",
     "\n",
-    "    # Pass the encoded input through the BiDAF model\n",
+    "    # Pass the encoded input through the model\n",
     "    outputs = bert_base_model(input_ids, attention_mask=attention_mask, token_type_ids=token_type_ids, return_dict=True)\n",
     "    start_logits = outputs.start_logits\n",
     "    end_logits = outputs.end_logits\n",
@@ -1614,7 +1613,7 @@
     }
    ],
    "source": [
-    "# Evaluate answers on test set\n",
+    "# Evaluate answers on custom test set\n",
     "f1_scores = []\n",
     "em_scores = []\n",
     "\n",
@@ -1647,24 +1646,25 @@
    ],
    "source": [
     "# Generate predictions on squad dataset\n",
-    "with open(\"squad/dev-v2.0.json\", \"r\") as f:\n",
-    "        data = json.load(f)\n",
-    "ids = []\n",
-    "answers = []\n",
-    "for article in tqdm(data[\"data\"], desc=\"Articles\"):\n",
-    "    for paragraph in article[\"paragraphs\"]:\n",
-    "        context = paragraph[\"context\"]\n",
-    "        for qa in paragraph[\"qas\"]:\n",
-    "            answer_predicted = answer_question_bert_base(question=qa[\"question\"], article=preprocess_article(context))\n",
-    "            answers.append(answer_predicted)\n",
-    "            ids.append(qa[\"id\"])\n",
     "\n",
-    "predictions = {}\n",
-    "for i, _ in enumerate(ids):\n",
-    "    predictions[ids[i]] = answers[i]\n",
+    "# with open(\"squad/dev-v2.0.json\", \"r\") as f:\n",
+    "#         data = json.load(f)\n",
+    "# ids = []\n",
+    "# answers = []\n",
+    "# for article in tqdm(data[\"data\"], desc=\"Articles\"):\n",
+    "#     for paragraph in article[\"paragraphs\"]:\n",
+    "#         context = paragraph[\"context\"]\n",
+    "#         for qa in paragraph[\"qas\"]:\n",
+    "#             answer_predicted = answer_question_bert_base(question=qa[\"question\"], article=preprocess_article(context))\n",
+    "#             answers.append(answer_predicted)\n",
+    "#             ids.append(qa[\"id\"])\n",
     "\n",
-    "with open(\"squad/predictions/bert_base.json\", \"w\") as f:\n",
-    "    json.dump(predictions, f)"
+    "# predictions = {}\n",
+    "# for i, _ in enumerate(ids):\n",
+    "#     predictions[ids[i]] = answers[i]\n",
+    "\n",
+    "# with open(\"squad/predictions/bert_base.json\", \"w\") as f:\n",
+    "#     json.dump(predictions, f)"
    ]
   },
   {
@@ -1725,7 +1725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the QA model and tokenizer\n",
+    "# Load the model and tokenizer\n",
     "model_name = \"distilbert-base-cased-distilled-squad\"\n",
     "distilbert_tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "distilbert_model = AutoModelForQuestionAnswering.from_pretrained(model_name)"
