--- a/a1911757_S1_ANLP_assign2.ipynb
+++ b/a1911757_S1_ANLP_assign2.ipynb
@@ -14,7 +14,7 @@
    "id": "740d95cb",
    "metadata": {},
    "source": [
-    "To view all related files used in this notebook, please refer to the full project at: https://github.com/vuanhtu52/anlp-assignment2.git"
+    "To view all related files used in this notebook, please refer to the full project at: https://github.com/vuanhtu52/anlp-assignment2"
    ]
   },
   {
